--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div class="container-fluid">
 			<h2>Plan your next adventure.</h2>
 				<div class="row">
-					<div class="col-md-6 video">
+					<div class="col-md-6">
 						<div>
 							<iframe width="400" height="280" src="https://www.youtube.com/embed/jrr_LAXHbnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
@@ -123,7 +123,3 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-<!-- https://www.libertytravel.com/ -->
-<!-- discover the world https://www.kayak.com 
-Specials, Account sign up and login tabs, be more inspired video in so where to section of page-->
