--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	<title>Wander</title>
 	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+
+	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Cookie|Oswald:300,400" rel="stylesheet">
+
+	<!-- FontAwesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">	
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+	<!-- Css -->
 	<link rel="stylesheet" type="text/css" href="style.css">	
 </head>
 <body>
@@ -84,12 +96,12 @@
 		<div class="container-fluid">
 			<h2>Plan your next adventure.</h2>
 				<div class="row">
-					<div class="col-md-6">
-						<div>
-							<iframe width="400" height="280" src="https://www.youtube.com/embed/jrr_LAXHbnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<div class="col-lg-6">
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-reponsive-item" src="https://www.youtube.com/embed/jrr_LAXHbnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
-					<div class="col-md-4 sign-up-form">
+					<div class="col-lg-6 sign-up-form">
 						<p>Sign up to Wander.</p>
 							<form>
 							  <div class="form-group">
@@ -115,7 +127,7 @@
 
 <div class="footer-section">
 	<div class="footer">
-		<footer>&copy 2018 aRoura 🌴</footer>
+		<footer>🌴 &copy 2019 by aRoura</footer>
 	</div>
 </div>
 
