--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <section id="sign-up">
 	<div class="bottom-section">
 		<div class="container-fluid">
-			<h2>Plan your next adventure.</h2>
+			<h2>Plan your next adventure</h2>
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="embed-responsive embed-responsive-16by9">
@@ -102,7 +102,7 @@
 						</div>
 					</div>
 					<div class="col-lg-6 sign-up-form">
-						<p>Sign up to Wander.</p>
+						<p>Sign up to Wander</p>
 							<form>
 							  <div class="form-group">
 							  	<label for="email">Email address</label>
