--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-reponsive-item" src="https://www.youtube.com/embed/jrr_LAXHbnQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="embed-reponsive-item" src="https://www.youtube.com/embed/1Lfq0RBUOBs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 					</div>
 					<div class="col-lg-6 sign-up-form">
